fix for firefox mobile landscape map overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 :focus {
   outline: 1px solid #4e92d7;
 }
